# zhenya_cv

./: Makefile  pyproject.toml
docs/: CNAME  education.html  index.html  interests.html  skills.html
src/zhenya_cv/: __init__.py
src/zhenya_cv/templates/: education.html  employment.html  interests.html  skills.html
src/zhenya_cv/templates/partials/: contacts.html  menu.html
