[project]
name = "zhenya-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eli Mayost", email = "eli.mayost@googlemail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "taskipy>=1.14.1",
]

[project.scripts]
zhenya-cv = "zhenya_cv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.taskipy.tasks]
server = "gunicorn -w 4 zhenya_cv:app"
